<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>name.ncg</groupId>
  <artifactId>name.ncg</artifactId>
  <version>0.1.0</version>
  <build>
    <resources>
		<resource>
			<directory>resources</directory>
			<targetPath>resources</targetPath>
			<includes>
				<include>**/*.csv</include>
				<include>**/*.zip</include>
			</includes>
		</resource>
	</resources>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  <dependency>
    <groupId>org.apache.lucene</groupId>
    <artifactId>lucene-core</artifactId>
    <version>5.3.1</version>
	</dependency>
	<dependency>
	    <groupId>org.apache.lucene</groupId>
	    <artifactId>lucene-analyzers-common</artifactId>
	    <version>5.3.1</version>
	</dependency>
	<dependency>
    <groupId>com.googlecode.aima-java</groupId>
    <artifactId>aima-core</artifactId>
    <version>3.0.0</version>
</dependency>
	<!--  <dependency>
	  <groupId>org.deeplearning4j</groupId>
	  <artifactId>rl4j</artifactId>
	  <version>1.0.0-beta3</version>
	  <type>pom</type>
	</dependency>
	<dependency>
	  <groupId>org.deeplearning4j</groupId>
	  <artifactId>deeplearning4j</artifactId>
	  <version>1.0.0-beta3</version>
	  <type>pom</type>
	</dependency>
	<dependency>
	  <groupId>org.deeplearning4j</groupId>
	  <artifactId>deeplearning4j-core</artifactId>
	  <version>1.0.0-beta3</version>
	</dependency>
	<dependency>
	  <groupId>org.deeplearning4j</groupId>
	  <artifactId>deeplearning4j-nlp</artifactId>
	  <version>1.0.0-beta3</version>
	</dependency>
	<dependency>
	  <groupId>org.deeplearning4j</groupId>
	  <artifactId>deeplearning4j-ui-standalone</artifactId>
	  <version>1.0.0-beta3</version>
	</dependency>
	<dependency>
	  <groupId>org.deeplearning4j</groupId>
	  <artifactId>deeplearning4j-ui-resources</artifactId>
	  <version>1.0.0-beta3</version>
	</dependency>
	<dependency>
	  <groupId>org.deeplearning4j</groupId>
	  <artifactId>deeplearning4j-cuda-9.0</artifactId>
	  <version>1.0.0-beta3</version>
	</dependency>
	-->
	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.13.2</version>
	</dependency>
  	<dependency>
  		<groupId>org.apache.commons</groupId>
  		<artifactId>commons-math3</artifactId>
  		<version>3.6.1</version>
  	</dependency>
  	<dependency>
  		<groupId>net.sf.jung</groupId>
  		<artifactId>jung-graph-impl</artifactId>
  	</dependency>
  	<dependency>
  		<groupId>net.sf.jung</groupId>
  		<artifactId>jung-io</artifactId>
  		<version>2.1.1</version>
  	</dependency>
  	<dependency>
    	<groupId>org.apache.commons</groupId>
    	<artifactId>commons-collections4</artifactId>
    	<version>4.1</version>
	</dependency>
	<dependency>
  		<groupId>com.fasterxml.jackson.core</groupId>
 		<artifactId>jackson-core</artifactId>
 		<version>2.13.4</version>
	</dependency>
	<dependency>
	  <groupId>com.fasterxml.jackson.core</groupId>
	  <artifactId>jackson-annotations</artifactId>
	  <version>2.13.4</version>
	</dependency>
	<dependency>
	  <groupId>com.fasterxml.jackson.core</groupId>
	  <artifactId>jackson-databind</artifactId>
	  <version>2.13.4</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.vividsolutions/jts -->
	<dependency>
	    <groupId>com.vividsolutions</groupId>
	    <artifactId>jts</artifactId>
	    <version>1.13</version>
	</dependency>
	<dependency>
		<groupId>ca.umontreal.iro.simul</groupId>
		<artifactId>ssj</artifactId>
		<version>3.3.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
	<dependency>
	    <groupId>com.opencsv</groupId>
	    <artifactId>opencsv</artifactId>
	    <version>5.7.0</version>
	</dependency>
  </dependencies>
  <dependencyManagement>
  	<dependencies>
  		<dependency>
  			<groupId>net.sf.jung</groupId>
  			<artifactId>jung-graph-impl</artifactId>
  			<version>2.1.1</version>
  		</dependency>
  	</dependencies>
  </dependencyManagement>
</project>